--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@
 @import "./layout/portfolio";
 @import "./components/modal";
 @import "./components/modal-forms";
+@import "./components/menu";
 
 
 
