--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,15 +1,18 @@
 .main{
-    display: flex;  
+   
+    //display: flex;  
 }
 
-    .main-nav{ 
-        display: flex;   
-        align-items: center;
+    .main-nav{  
+        
+        //display: flex;   
+        //align-items: center;
     }
         
-.site-nav  {
-     display: flex; 
-           margin-left: 93px;   
+.site-nav  { 
+    display: none;
+     //display: flex; 
+       //    margin-left: 93px;   
           
 
      & .site-nav__item:not(:last-child) { 
