--- a/css/main.css
+++ b/css/main.css
@@ -1158,7 +1158,7 @@ body {
   width: 100vw;
   height: 100vh;
   padding: 32px;
-  background-color: #3f51b5;
+  background-color: #3c4790;
   z-index: 999;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
@@ -1184,14 +1184,21 @@ body {
   padding: 0;
   margin: 0;
   list-style: none;
+  margin-right: auto;
   margin-bottom: auto;
 }
 
 .mobile-menu .link {
   display: block;
   padding: 10px;
-  color: #fff;
+  margin-right: auto;
   text-decoration: none;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #212121;
+  text-align: left;
 }
 
 .mobile-social {
@@ -1199,4 +1206,12 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: 20px;
+}
+
+.mobile-menu-link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #212121;
 }/*# sourceMappingURL=main.css.map */
