--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -61,7 +61,7 @@
     width: 100vw;
     height: 100vh;
     padding: 32px;
-    background-color: #3f51b5;
+    background-color:  #3c4790;
     z-index: 999;
   
     transform: translateX(100%);
@@ -84,16 +84,40 @@
     padding: 0;
     margin: 0;
     list-style: none;
+    margin-right: auto;
     margin-bottom: auto;
   }
   
   .mobile-menu .link {
     display: block;
     padding: 10px;
-    color: #fff;
+    margin-right: auto;
     text-decoration: none;
+
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    
+    color: #212121;
+    text-align: left;
+
+
+
   }
   .mobile-social{
     display: flex;
     gap:20px;
+  }
+  .mobile-menu-item{
+ 
+   
+  }
+  .mobile-menu-link{
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    
+    color: #212121;
   }
