--- a/css/main.css
+++ b/css/main.css
@@ -284,16 +284,12 @@ body {
   color: #212121;
 }
 
-.preference {
-  display: block;
-  list-style: none;
-}
 @media screen and (min-width: 768px) {
   .preference {
-    
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    
-  
+    margin: -15px;
   }
 }
 .preference .preference__items + .preference__items {
