--- a/sass/layout/_sect-preferens.scss
+++ b/sass/layout/_sect-preferens.scss
@@ -20,33 +20,40 @@
     color: $title-tekst-color;  
       }
     
-    .preference  {
+      .preference  {
         display: block;
-        list-style: none;
+      
 
  @media screen and (min-width:768px) {
-    display: flex;
-   // flex-wrap: wrap;
-    width: calc((100%-2*30px)/2);
+   display: flex;
+    flex-wrap: wrap;
+    
    
  }
- & .preference__items{
+    & .preference__items{
     @media screen and (min-width:768px) {
-        //flex-wrap: wrap;
-       // width: 50%;
+     width: calc((100%-60px)/2);
+    
+
         
-     }
+   }
  }
+
+ 
+ 
 
 
         & .preference__items +.preference__items{
             
             margin-left: 30px;
+            
             @media screen and (max-width:768px) {
                margin: 0;
+
+               
              }
 
-
+            
 
              
            }
@@ -85,6 +92,8 @@
     margin-bottom: 30px;
     
     }
+
+  
     
     
     & .preference__items:nth-child(4)::before{
@@ -102,5 +111,5 @@
     & .preference__items:nth-child(1)::before{
         background-image: url(../imges/icons.svg/antenna\ 1\ \(1\).svg);
     }
-}
-    
+
+    }
