--- a/sass/layout/_sect-what-doing.scss
+++ b/sass/layout/_sect-what-doing.scss
@@ -1,4 +1,13 @@
 /* чим займаймося what-doing img */
+//.what-doing {
+   // @media screen and (max-width: 1199px){
+     //  display: none;
+  
+        
+   // }
+
+
+
 .list-imag__item {
     position: relative;
     /* margin-right:30px; */
