--- a/sass/layout/_sect-preferens.scss
+++ b/sass/layout/_sect-preferens.scss
@@ -27,16 +27,23 @@
  @media screen and (min-width:768px) {
    display: flex;
     flex-wrap: wrap;
-    
-   
+      
  }
+
+ @media screen and (min-width:1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+    
+       
+  }
+
+
     & .preference__items{
     @media screen and (min-width:768px) {
-     width: calc((100%-60px)/2);
-    
-
+     width: calc((100% - 60px)/2);
         
    }
+   
  }
 
  
