--- a/sass/layout/_sect-what-doing.scss
+++ b/sass/layout/_sect-what-doing.scss
@@ -6,7 +6,13 @@
         
    // }
 
+.what-doing{
+     @media screen and (max-width:1199px) {
+        display: none;
+}
 
+    
+}
 
 .list-imag__item {
     position: relative;
