--- a/sass/layout/_sect-clients.scss
+++ b/sass/layout/_sect-clients.scss
@@ -3,22 +3,42 @@
 
   
 
-    display: block;
-  justify-items: center;
-   align-items: center;
+    display: flex; 
+    flex-wrap: wrap;
+    @media screen and (min-width:1200px) {
+        display: flex; 
+        flex-wrap:nowrap;
+    }
+
+  //justify-items: center;
+   //align-items: center;
 
 & .clients__item {
 
-   // @media screen and (min-width:768px) {
-       // width: calc((100%-60px)/2);
+    @media screen and (min-width:480px) {
+        width: calc((100% - 60px)/2);
+        margin: 15px;
+    }
 
-    width: 170px;
-    height: 92px;
+    @media screen and (min-width:480px) {
+        width: calc((100% - 60px)/2);
+        margin: 15px;
+    }
+    @media screen and (min-width:1200px) {
+        margin: 8px;
+    }
+
+
+   width: 170px;
+   height: 92px;
     background-color:#F5F5F5;
-    margin-right: 30px;
+    //margin-right: 30px;
     border: 1px solid #AFB1B8;
-border-radius: 4px;
+     border-radius: 4px;
 }
+
+
+
  & .clients__item:last-child{
     margin-right: 0px;
 }
