--- a/css/main.css
+++ b/css/main.css
@@ -327,6 +327,11 @@ body {
   letter-spacing: 0.03em;
   color: #212121;
 }
+@media screen and (max-width: 1199px) {
+  .preference .preference__title {
+    text-align: center;
+  }
+}
 .preference .preference__text {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -420,9 +425,30 @@ body {
 
 /* наша команда */
 .members {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .members {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .members {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .members .members_foto {
+    width: 100%;
+  }
 }
 .members .members__item {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -430,8 +456,16 @@ body {
   border-radius: 0px 0px 4px 4px;
   border: 1px solid #EEEEEE;
 }
-.members .members__item + .members__item {
-  margin-left: 30px;
+@media screen and (min-width: 768px) {
+  .members .members__item {
+    width: calc((100% - 60px) / 2);
+    margin: 15px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .members .members__item + .members__item {
+    margin-left: 10px;
+  }
 }
 .members .members__title {
   margin-top: 30px;
@@ -486,19 +520,16 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
-
-.item-member .icon-member {
+.members .item-member .icon-member {
   fill: #AFB1B8;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.item-member .icon-member:hover,
-.item-member .icon-member:focus {
+.members .item-member .icon-member:hover,
+.members .item-member .icon-member:focus {
   fill: #ffffff;
 }
-
-.item-member .member-link {
+.members .item-member .member-link {
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -517,14 +548,12 @@ body {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.item-member .member-link:hover {
+.members .item-member .member-link:hover {
   background-color: #2196F3;
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
-
-.section-members {
+.members .section-members {
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: #F5F4FA;
