--- a/sass/layout/_sect-members.scss
+++ b/sass/layout/_sect-members.scss
@@ -1,20 +1,48 @@
 /* наша команда */
 
 .members{
-    display: flex;
+    display: block;
+
+    @media screen and (min-width:768px) {
+        display: flex;
+         flex-wrap: wrap;
+           
+      }
+      @media screen and (min-width:1200px) {
+        display: flex;
+        flex-wrap: nowrap;
+                 
+      }
+
+
+    .members_foto {
+        @media screen and (max-width:1199px) {
+    width: 100%;
+             }  
+    }
 
     
  & .members__item{
+    
+    @media screen and (min-width:768px) {
+        width: calc((100% - 60px)/2);
+        margin: 15px;   
+      }
+
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2); 
     border-radius: 0px 0px 4px 4px; 
     border: 1px solid #EEEEEE;
  }
 
  & .members__item + .members__item{
-    margin-left: 30px;
+    @media screen and (max-width:768px){
+       margin-left: 10px;
+    }
+  
+   // margin-left: 30px;
    }
 
-
+ 
 
 & .members__title {
 margin-top: 30px;
@@ -46,7 +74,7 @@ align-items: center;
     }
 
 & .item-member {
-
+   
     width: 44px;
     height: 44px;
     /* background-color: #FFFFFF; */
@@ -64,7 +92,7 @@ align-items: center;
         display: flex;
     justify-content: center;
     align-items: center;}
-}
+
 
     .item-member .icon-member{
         fill: #AFB1B8;
@@ -99,4 +127,4 @@ fill: #ffffff;
     padding-top: 94px;
     padding-bottom: 94px;
     background-color: #F5F4FA;
-}    
+}    }
