--- a/sass/layout/_sect-preferens.scss
+++ b/sass/layout/_sect-preferens.scss
@@ -13,6 +13,7 @@
 
 
 .section-title{
+   
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -66,7 +67,12 @@
            }
     
         & .preference__title {
-        margin-top: 0px;
+            @media screen and (max-width:1199px) {
+                text-align: center;
+                                   
+               }
+           
+            margin-top: 0px;
         margin-bottom: 10px;
     font-weight: 700;
     font-size: 14px;
