--- a/css/main.css
+++ b/css/main.css
@@ -243,6 +243,16 @@ body {
   background-position: center;
   background-size: cover;
 }
+@media screen and (min-width: 768px) {
+  .conteiner-hero {
+    max: width 480px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../imges/Img\ 13hero\ .jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imges/Img\ 13hero\ .jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+}
 
 .hero {
   /* padding-top: 200px; */
@@ -935,9 +945,13 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
   -webkit-transition: opacity 500ms, visibility 500ms;
   transition: opacity 500ms, visibility 500ms;
+  padding: 94px 15px;
+  overflow: scroll;
 }
 
 .modal-backdrop.is-hidden .modal {
@@ -946,19 +960,20 @@ body {
 }
 
 .modal {
-  width: 528px;
-  height: 581px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%) rotate(0);
-          transform: translate(-50%, -50%) rotate(0);
-  -webkit-transition: -webkit-transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #ffffff;
+  padding: 15px;
   border-radius: 20px;
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%) rotate(0);
+            transform: translate(-50%, -50%) rotate(0);
+    width: 100%;
+    max-width: 450px;
+  }
 }
 .modal .close-sign {
   position: absolute;
@@ -1063,7 +1078,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 448px;
+  width: 370px;
   margin-top: 10px;
   margin-bottom: 4px;
   /* margin-left: 40px; */
@@ -1076,7 +1091,7 @@ body {
 }
 
 .user-coment-area {
-  width: 448px;
+  width: 370px;
   height: 120px;
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1100,9 +1115,9 @@ body {
   width: 200px;
   height: 50px;
   margin-top: 25px;
-  margin-bottom: 0 px;
-  margin-left: 160px;
-  margin-right: 160px;
+  margin-bottom: 40px;
+  margin-left: 120px;
+  margin-right: 120px;
 }
 
 .icon-modal {
@@ -1120,7 +1135,7 @@ body {
 }
 
 .modal-input {
-  width: 448px;
+  width: 370px;
   height: 40px;
   padding-left: 35px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1150,11 +1165,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 15px;
+  margin-right: 15px;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71px;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: #757575;
 }
