--- a/sass/components/_modal-forms.scss
+++ b/sass/components/_modal-forms.scss
@@ -45,7 +45,7 @@ color: #757575;
    .user-coment {
     display: flex;
     flex-direction: column;
-    width: 448px;
+    width: 370px;
        margin-top: 10px;
     margin-bottom: 4px;
     /* margin-left: 40px; */
@@ -58,7 +58,7 @@ color: #757575;
   }
   
   .user-coment-area{
-    width: 448px;
+    width: 370px;
     height: 120px;
     resize: none;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -79,9 +79,9 @@ color: #2196F3;
     width: 200px;
     height: 50px;
     margin-top: 25px;
-    margin-bottom:0 px;
-    margin-left: 160px;
-    margin-right: 160px;
+    margin-bottom: 40px;
+    margin-left: 120px;
+    margin-right: 120px;
   }
   .icon-modal {
     position: absolute;
@@ -98,7 +98,8 @@ color: #2196F3;
 }
 
 .modal-input{
-    width: 448px;
+
+    width: 370px;
    height: 40px;
     padding-left: 35px;
        
@@ -129,11 +130,11 @@ color: #2196F3;
 .user-agree{
     display: flex;
     align-items: center;
-       margin-left: 50px;
-    margin-right: 50px;
+       margin-left: 15px;
+    margin-right: 15px;
     font-weight: 400;
-font-size: 14px;
-line-height: 1.71px;
+font-size: 12px;
+line-height: 1.16;
 letter-spacing: 0.03em;
 color: #757575;
 }
