--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,8 +6,12 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.8);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
     transition: opacity 500ms, visibility 500ms;
+     padding: 94px 15px;
+     overflow: scroll;
   }
   
   .modal-backdrop.is-hidden .modal {
@@ -15,16 +19,32 @@
   }
   
   .modal {
-    width: 528px;
-    height: 581px;
-    position: absolute;
-    top: 50%;
+
+
+   // width: 528px;
+   // height: 581px;
+   // position: absolute;
+    //top: 50%;
+   // left: 50%;
+   // transform: translate(-50%, -50%) rotate(0);
+    //transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #ffffff;
+    padding: 15px;
+    border-radius: 20px;
+    
+    @media screen and (min-width:768px) {
+        position: absolute;
+     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) rotate(0);
-    transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-    background-color: #ffffff;
-    border-radius: 20px;
-  
+   // transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+     width: 100%;
+     max-width: 450px;
+    
+
+
+
+    }
   
   & .close-sign {
     position: absolute;
