--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,14 @@ body {
   /* .site-nav .item + .item { */
   /* margin-left: 50px; */
 }
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 83px;
+  }
+}
 .site-nav .site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
@@ -166,9 +174,33 @@ body {
 .mail-phone {
   display: none;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .mail-phone {
+    display: block;
+    margin-left: 50px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mail-phone {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .mail-phone .mail-phone__item:last-child {
+    margin-top: 10px;
+    margin-right: 30px;
+  }
+}
 .mail-phone .mail-phone__item:not(:last-child) {
   margin-right: 50px;
   color: #757575;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .mail-phone .mail-phone__item:not(:last-child) {
+    margin-right: 0px;
+  }
 }
 .mail-phone .link:hover, .mail-phone .link:focus {
   color: #2196F3;
@@ -1317,6 +1349,10 @@ body {
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: #212121;
+}
+
+.mobile-menu-link .link {
+  color: #2196F3;
 }
 
 .mobile-contacs-item {
