--- a/sass/layout/_mail-phone.scss
+++ b/sass/layout/_mail-phone.scss
@@ -11,13 +11,30 @@
 
     .mail-phone { 
    display: none;
-     //display: flex; 
-      //  margin-left: 300px;
-     
+   @media screen and (min-width:768px)  and (max-width:1199px) {
+    display: block; 
+     margin-left: 50px;
+   }
+     @media screen and (min-width:1200px){
+     display: flex;
+   }
+   & .mail-phone__item:last-child{
+    @media screen and (min-width:768px) and (max-width:1199px){
+    margin-top: 10px; 
+    margin-right: 30px;
+    
+   }
+
+   }
      
 & .mail-phone__item:not(:last-child) { 
-        margin-right: 50px;  
-        color: $primery-text-color;
+
+    @media screen and (min-width:768px) and (max-width:1199px){
+        margin-right: 0px;
+    }
+
+       margin-right: 50px;
+       color: $primery-text-color;
       }
 
 & .link:hover,
