--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -13,9 +13,10 @@
         
 .site-nav  { 
     display: none;
-     //display: flex; 
-       //    margin-left: 93px;   
-          
+    @media screen and (min-width:768px) {
+     display: flex; 
+          margin-left: 83px;   
+    }
 
      & .site-nav__item:not(:last-child) { 
          margin-right: 50px; 
