--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,7 +6,7 @@
         background-color:#2F303A;
 }
 .logo-footer{
-    margin-bottom: 20px;
+       margin-bottom: 20px;
 font-family: 'Raleway';
 font-weight: 700;
 font-size: 26px;
@@ -14,8 +14,25 @@ line-height: 1.19;
 letter-spacing: 0.03em;
 color: #FFFFFF;
 }
+.logo-link-footer{
+    @media screen and (max-width:768px){
+        margin-left: 140px;
+           }
+           font-family: $logo-font;
+           font-weight: 700;
+           font-size: 26px;
+           text-decoration: none;
+           color: $accent-color;   
+           
+}
+
 
 .street{
+
+    @media screen and (max-width:768px){
+margin-left: 100px;
+
+    }
     margin-top: 20px;
 margin-bottom: 9px;
 font-size: 14px;
@@ -29,20 +46,30 @@ color: #FFFFFF;
     color: $accent-color; 
 }
 
- .mail-footer .link{ 
+ .mail-footer-link{ 
+    @media screen and (max-width:768px){
+        margin-left: 130px;
+    }
+
     margin-bottom: 9px;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     /* color: rgba(255, 255, 255, 0.6); */
 }
-.tel-footer .link{ 
+.tel-footer-link{ 
+    @media screen and (max-width:768px){
+        margin-left: 140px;
+    }
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6); 
 }
 .footer-conteiner {
-    display: flex;
+    display: block;
+
+  
+   // display: flex;
     
 }
