--- a/css/main.css
+++ b/css/main.css
@@ -714,7 +714,7 @@ body {
   text-decoration: none;
   color: #2196F3;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .logo-link-footer {
     margin-left: 140px;
   }
@@ -728,7 +728,7 @@ body {
   letter-spacing: 0.03em;
   color: #FFFFFF;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .street {
     margin-left: 100px;
   }
@@ -746,7 +746,7 @@ body {
   letter-spacing: 0.03em;
   /* color: rgba(255, 255, 255, 0.6); */
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .mail-footer-link {
     margin-left: 130px;
   }
@@ -758,7 +758,7 @@ body {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .tel-footer-link {
     margin-left: 140px;
   }
@@ -767,7 +767,13 @@ body {
 .footer-conteiner {
   display: block;
 }
-
+@media screen and (min-width: 768px) {
+  .footer-conteiner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 /* приєднатися */
 /* .addition { */
 .add {
@@ -826,6 +832,13 @@ body {
 /* підпишіться на розсилку */
 .sing {
   display: block;
+}
+@media screen and (min-width: 1200px) {
+  .sing {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .input-sing {
@@ -892,11 +905,28 @@ body {
   text-align: center;
   padding-bottom: 50px;
 }
+@media screen and (max-width: 767px) {
+  .button__portfolio {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+  }
+}
 .button__portfolio .list {
   text-align: center;
   border-radius: 4px;
   margin-right: 8px;
   /* outline: 2px solid tomato;  */
+}
+@media screen and (max-width: 767px) {
+  .button__portfolio .list {
+    margin-bottom: 10px;
+  }
 }
 .button__portfolio .link__button:hover, .button__portfolio .link__button:focus {
   cursor: pointer;
@@ -911,26 +941,61 @@ body {
   border: transparent;
 }
 
+@media screen and (max-width: 1199px) {
+  .portfolio-foto {
+    width: 100%;
+  }
+}
+
 .portfolio-img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-img {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-img {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 .portfolio-img .portfolio-img__link-img {
   display: block;
   /* width: 370px; */
-  margin-right: 25px;
   margin-bottom: 30px;
   border: 1px solid #EEEEEE;
   /* background-color: tomato; */
 }
-.portfolio-img .portfolio-img__link-img:nth-child(3n) {
-  margin-right: 0px;
+@media screen and (min-width: 768px) {
+  .portfolio-img .portfolio-img__link-img {
+    width: calc((100% - 60px) / 2);
+    margin: 15px;
+  }
 }
-.portfolio-img .portfolio-img__link-img:nth-last-child(-n+3) {
-  margin-bottom: 0px;
+@media screen and (min-width: 1200px) {
+  .portfolio-img .portfolio-img__link-img {
+    width: calc((100% - 90px) / 3);
+    margin: 15px;
+  }
+}
+@media screen and (min-width: 1200x) {
+  .portfolio-img .portfolio-img__link-img:nth-child(3n) {
+    margin-right: 0px;
+  }
+}
+@media screen and (min-width: 1200x) {
+  .portfolio-img .portfolio-img__link-img:nth-last-child(-n+3) {
+    margin-bottom: 0px;
+  }
 }
 .portfolio-img .title {
   margin-top: 20px;
