--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -16,12 +16,25 @@
  }
 .button__portfolio {
     display: flex;
+    @media screen and (max-width:767px){
+        display: flex; 
+        flex-wrap: wrap; 
+        justify-content: left; 
+    
+    }
+  
+   
+
+
     justify-content: center;
     text-align: center;
     padding-bottom: 50px;
 
        
    & .list{
+    @media screen and (max-width:767px){
+        margin-bottom: 10px;
+    }
         text-align: center;
           border-radius: 4px;
     margin-right: 8px; 
@@ -44,27 +57,64 @@ background-color: $accent-color;
 
 }
 
+.portfolio-foto{
+    @media screen and (max-width:1199px) {
+        width: 100%;
+
+                 }  
+}
+
 .portfolio-img{
-    display: flex;
-    flex-wrap: wrap;
+    display: block;
+
+    @media screen and (min-width:768px) {
+        display: flex;
+         flex-wrap: wrap;
+    }
+
+    @media screen and (min-width:1200px) {
+        display: flex;
+        flex-wrap: wrap;
+                 
+      }
+
+    //display: flex;
+    //flex-wrap: wrap;
     
 
  & .portfolio-img__link-img{
+
     display: block;
+     
+    @media screen and (min-width:768px) {
+        width: calc((100% - 60px)/2);
+        margin: 15px;   
+      }
+
+
+    @media screen and (min-width:1200px) {
+        width: calc((100% - 90px)/3);
+        margin: 15px;   
+                 }  
+
     /* width: 370px; */
-    margin-right: 25px;
+   // margin-right: 25px;
     margin-bottom: 30px;
     border: 1px solid #EEEEEE;
         /* background-color: tomato; */
  }
 
  & .portfolio-img__link-img:nth-child(3n){
+    @media screen and (min-width:1200x){
     margin-right: 0px;
     }
-
+ }
  & .portfolio-img__link-img:nth-last-child(-n+3){
-    margin-bottom: 0px;
-     }
+   
+    @media screen and (min-width:1200x){
+        margin-bottom: 0px;
+        }
+}
     
 
      
@@ -99,6 +149,7 @@ color: $primery-text-color;
  */
    
 .portfolio-img__link-img .img-wraper{
+    
     display: block;
     position: relative; 
     overflow: hidden;
