--- a/sass/layout/_sect-sing.scss
+++ b/sass/layout/_sect-sing.scss
@@ -3,7 +3,10 @@
 
 .sing {
     display: block;
-  
+    
+    @media screen and (min-width:1200px){
+      display: flex;   
+  }
   //display: flex;
     
 
