--- a/sass/layout/_sect-members.scss
+++ b/sass/layout/_sect-members.scss
@@ -23,6 +23,9 @@
 
     
  & .members__item{
+    @media screen and (max-width:767px) {
+        margin-bottom: 30px;
+    }
     
     @media screen and (min-width:768px) {
         width: calc((100% - 60px)/2);
