--- a/sass/layout/_conteiner.scss
+++ b/sass/layout/_conteiner.scss
@@ -13,8 +13,8 @@ $breakpoints:(
     padding-left: 15px; 
     padding-right: 15px; 
 
-     outline: 2px solid tomato;   
-     outline-offset: -2px;
+    // outline: 2px solid tomato;   
+    // outline-offset: -2px;
 
  
  
