--- a/css/main.css
+++ b/css/main.css
@@ -1461,7 +1461,7 @@ body {
   gap: 20px;
 }
 
-.mobile-menu-link {
+.mobile-menu-link .link {
   font-weight: 500;
   font-size: 40px;
   line-height: 1.17;
@@ -1469,7 +1469,8 @@ body {
   color: #212121;
 }
 
-.mobile-menu-link .link {
+.mobile-menu-link .link:hover,
+.mobile-menu-link .link:hover {
   color: #2196F3;
 }
 
