--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -101,7 +101,7 @@
     line-height: 1.17;
     letter-spacing: 0.02em;
     
-    color: #212121;
+    color:#212121;
     text-align: left;
 
 
@@ -117,7 +117,7 @@
  
    
  // }
-  .mobile-menu-link{
+  .mobile-menu-link .link{
     font-weight: 500;
     font-size: 40px;
     line-height: 1.17;
@@ -125,7 +125,9 @@
     
     color: #212121;
   }
-  .mobile-menu-link .link{
+  .mobile-menu-link .link:hover,
+  .mobile-menu-link .link:hover
+  {
     color: $accent-color; 
   }
 
