--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -108,6 +108,11 @@
 
   }
   .mobile-social{
+    @media screen and (max-width:480px){
+     display: flex;
+     flex-wrap: wrap;
+
+    }
     display: flex;
     margin-top: 64px;
     margin-bottom: 40px;
@@ -137,6 +142,9 @@
 }
 
 .mobile-contacs-link-tel{
+  @media screen and (max-width:480px){
+    font-size: 24px;
+  }
   font-weight: 500;
 font-size: 34px;
 line-height: 1.25;
