--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -11,17 +11,10 @@
     rgba(47, 48, 58, 0.4), 
      rgba(47, 48, 58, 0.4) ),
 
-     url(../imges/hero/Header_img_sm1x.png);
-    @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx){
-        background-image:    
-        linear-gradient(to right,
-        rgba(47, 48, 58, 0.4), 
-         rgba(47, 48, 58, 0.4) ),
-        url(../imges/hero/Header_img_sm2x.png);  
-    }
-   
+     url(../imges/Img\ 13hero\ .jpg);
+     background-repeat: no-repeat;
+     background-position: center;
+     background-size: cover;
     
 
       }
@@ -53,6 +46,15 @@ background-size: cover;
     
 }
 .hero__title {
+    @media screen and (max-width:480px) {
+        padding-top: 200px;
+margin-top: 0;
+margin-bottom: 30px;       
+font-weight: 500;
+font-size: 42px;
+line-height:1.5;
+    }
+
 padding-top: 200px;
 margin-top: 0;
 margin-bottom: 30px;       
