--- a/sass/layout/_sect-sing.scss
+++ b/sass/layout/_sect-sing.scss
@@ -32,6 +32,9 @@
   @media screen and (max-width:768px){
     margin-left: 115px;
   }
+  @media screen and (max-width:480px){
+    margin-left: 50px;
+  }
     position: relative;
     display: inline-block;
     margin-top: 43px;
