--- a/css/main.css
+++ b/css/main.css
@@ -1506,15 +1506,23 @@ body {
   display: flex;
   margin-top: 64px;
   margin-bottom: 40px;
-  gap: 20px;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 470px) {
   .mobile-social {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 480px) {
+  .mobile-social {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
 }
 
