--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -108,15 +108,20 @@
 
   }
   .mobile-social{
-    @media screen and (max-width:480px){
+    @media screen and (max-width:470px){
      display: flex;
      flex-wrap: wrap;
 
     }
+    @media screen and (min-width:480px){
+      display: flex;
+      flex-wrap: nowrap;
+ 
+     }
     display: flex;
     margin-top: 64px;
     margin-bottom: 40px;
-    gap:20px;
+   // gap:20px;
   }
   //.mobile-menu-item{
  
