--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -21,11 +21,11 @@ color: #FFFFFF;
 .logo-link-footer{
     
 
-    @media screen and (max-width:767px){
-        margin-left: 140px;
+    @media screen and (max-width:767px) and (min-width:480px) {
+        margin-left: 130px;
            }
 
-           @media screen and (max-width:480px){
+           @media screen and (max-width:479px){
             margin-left: 50px;
                }
            font-family: $logo-font;
@@ -39,11 +39,11 @@ color: #FFFFFF;
 
 .street{
 
-    @media screen and (max-width:767px){
+    @media screen and (max-width:767px) and (min-width:480px){
 margin-left: 100px;
 
     }
-    @media screen and (max-width:480px){
+    @media screen and (max-width:479px){
         margin-left: 35px;
     }
     margin-top: 20px;
@@ -60,10 +60,10 @@ color: #FFFFFF;
 }
 
  .mail-footer-link{ 
-    @media screen and (max-width:767px){
+    @media screen and (max-width:767px) and (min-width:480px){
         margin-left: 130px;
     }
-    @media screen and (max-width:480px){
+    @media screen and (max-width:479px){
         margin-left: 50px;
     }
     margin-bottom: 9px;
@@ -73,10 +73,10 @@ color: #FFFFFF;
     /* color: rgba(255, 255, 255, 0.6); */
 }
 .tel-footer-link{ 
-    @media screen and (max-width:767px){
+    @media screen and (max-width:767px) and (min-width:480px){
         margin-left: 140px;
     }
-    @media screen and (max-width:480px){
+    @media screen and (max-width:479px){
         margin-left: 60px;
     }
 font-size: 14px;
@@ -87,13 +87,25 @@ color: rgba(255, 255, 255, 0.6);
 .footer-conteiner {
     display: block;
 
-    @media screen and (min-width:768px)  {
-       display: flex;
+    @media screen and (min-width:768px) and (max-width:1199px)  {
+      display: flex;
+       flex-wrap: wrap;
+       width:(calc(100%)/2) ;
+        
       
     }
-   //@media screen and  (min-width:1200px) {
-        //display: flex;
-//}
+   @media screen and  (min-width:1200px) {
+        display: flex;
+}
    // display: flex;
-    
+   .footer-tablet{
+    @media screen and (min-width:768px) and (max-width:1199px)  {
+        display: flex;
+    flex-wrap: nowrap;
+
+   }
+
+ 
+   
+}
 }
