--- a/sass/layout/_sect-sing.scss
+++ b/sass/layout/_sect-sing.scss
@@ -13,10 +13,10 @@
    }
    .input-sing{
 
-    @media screen and (max-width:768px){
+    @media screen and (max-width:767px) {
       width: 100%;
   }
-    width: 360px;
+    width: 300px;
     height: 50px;
     background-color: #2F303A;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -29,10 +29,10 @@
    }
 
  .to-sing {
-  @media screen and (max-width:768px){
+  @media screen and (max-width:767px) and (min-width:480px){
     margin-left: 115px;
   }
-  @media screen and (max-width:480px){
+  @media screen and (max-width:479px){
     margin-left: 50px;
   }
     position: relative;
