--- a/sass/layout/_sect-sing.scss
+++ b/sass/layout/_sect-sing.scss
@@ -7,6 +7,13 @@
     @media screen and (min-width:1200px){
       display: flex;   
   }
+
+ // @media screen and (min-width:768px) and (max-width:1199px){
+ //   margin-top: 100px;
+ //   margin-right: 120px;
+//}
+
+
   //display: flex;
     
 
