--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -88,8 +88,10 @@ color: rgba(255, 255, 255, 0.6);
     display: block;
 
     @media screen and (min-width:768px) and (max-width:1199px)  {
-      display: flex;
-       flex-wrap:nowrap;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: baseline;
              
         
       
