--- a/sass/layout/_sect-addition.scss
+++ b/sass/layout/_sect-addition.scss
@@ -11,6 +11,9 @@
    
    margin-left: 75px;
 }
+@media screen and (min-width:768px) and (max-width:1199px)  {
+margin-left: 300px;
+}
     /* margin-right: 868px;  */
    font-weight: 700;
 font-size: 14px;
@@ -29,6 +32,10 @@ color: #FFFFFF
    margin-left: 1px;
    
 }
+
+@media screen and (min-width:768px) and (max-width:1199px)  {
+   margin-left: 200px;
+   }
       /* margin-bottom: 100px; */
     /* margin-left:  700px;    */
 
