--- a/css/main.css
+++ b/css/main.css
@@ -917,6 +917,12 @@ body {
     display: flex;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .sing {
+    margin-top: 20px;
+    margin-right: 110px;
+  }
+}
 
 .input-sing {
   width: 300px;
@@ -931,6 +937,12 @@ body {
 @media screen and (max-width: 767px) {
   .input-sing {
     width: 100%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .input-sing {
+    margin-left: 150px;
+    width: 450px;
   }
 }
 
@@ -956,6 +968,11 @@ body {
 @media screen and (max-width: 479px) {
   .to-sing {
     margin-left: 50px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .to-sing {
+    margin-left: 290px;
   }
 }
 
