--- a/sass/layout/_sect-sing.scss
+++ b/sass/layout/_sect-sing.scss
@@ -8,10 +8,11 @@
       display: flex;   
   }
 
- // @media screen and (min-width:768px) and (max-width:1199px){
- //   margin-top: 100px;
- //   margin-right: 120px;
-//}
+ @media screen and (min-width:768px) and (max-width:1199px){
+  // margin-top: 100px;
+  margin-top: 20px;
+   margin-right: 110px;
+}
 
 
   //display: flex;
@@ -23,6 +24,12 @@
     @media screen and (max-width:767px) {
       width: 100%;
   }
+  @media screen and (min-width:768px) and (max-width:1199px){
+    // margin-top: 100px;
+   margin-left: 150px;
+  width: 450px;
+  }
+  
     width: 300px;
     height: 50px;
     background-color: #2F303A;
@@ -42,6 +49,10 @@
   @media screen and (max-width:479px){
     margin-left: 50px;
   }
+  @media screen and (min-width:768px) and (max-width:1199px){
+    margin-left: 290px;
+  }
+  
     position: relative;
     display: inline-block;
     margin-top: 43px;
